# latent

./: .gitignore  README.md  pyproject.toml
latent/: autoencoder.py  cli_params.py  gan.py  multi_run.py  vae.py  wgan.py
latent/dev/: dev_log.md
latent/vae/: autoencoder.py  vae_notes.md
notes/: autoencoder_notes.md  dev_log.md  gan_notes.md  vae_notes.md
