[tool.poetry]
name = "latent"
version = "0.1.0"
description = "Exploring VAEs, GANs, and Diffusion models."
authors = ["gordonbchen <gordonbchen@gmail.com>"]
license = "MIT"
readme = "README.md"

package-mode = false

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
