[tool.poetry]
name = "latent"
version = "0.1.0"
description = "Exploring VAEs, GANs, and Diffusion models."
authors = ["gordonbchen <gordonbchen@gmail.com>"]
license = "MIT"
readme = "README.md"

package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "^3.10.0"
numpy = "^2.2.0"
torch = "^2.5.1"
torchvision = "^0.20.1"
tensorboard = "^2.18.0"
scikit-learn = "^1.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
